--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@
 
 .sidebar {
   float: right;
-  width: 50%;
+  width: 100;
   height: 50%;
 }
 
@@ -29,6 +29,6 @@
   color: red;
 }
 .image {
-  width: 70%;
+  width: 100;
   height: 50%;
 }
